2014-08-17  Julien Bect  <julien.bect@supelec.fr>

	Deprecate stk_plot2d.

	* misc/plot/stk_plot2d.m: Deprecated.
	* arrays/@stk_factorialdesign/contour.m: Overload base function.
	* arrays/@stk_factorialdesign/mesh.m: Overload base function.
	* arrays/@stk_factorialdesign/meshc.m: Overload base function.
	* arrays/@stk_factorialdesign/meshz.m: Overload base function.
	* arrays/@stk_factorialdesign/pcolor.m: Overload base function.
	* arrays/@stk_factorialdesign/surf.m: Overload base function.
	* arrays/@stk_factorialdesign/private/plot_surfmeshcontour.m:
	Provide a common implementation for overloading surf/contour/...
	* examples/01_kriging_basics/stk_example_kb03.m: Use contour and
	pcolor.
	* examples/03_miscellaneous/stk_example_misc04.m: Use pcolor.
	* admin/octave-pkg/INDEX: Update with the new functions. Hide
	stk_plot2d.

	@stk_dataframe/plot.m: Hold on after the first plot.

	* arrays/@stk_dataframe/plot.m: Hold on after the first plot, if
	there are several (fixes a bug introduced yesterday).

2014-08-16  Julien Bect  <julien.bect@supelec.fr>

	@stk_dataframe/plot.m: Full rewrite again.

	* arrays/@stk_dataframe/plot.m: Full rewrite again, to improve
	even more compatibility with the base plot function. The case
	where x is an stk_dataframe objects with two or more columns is
	now handled in a way that is consistent with the base plot
	function (i.e., if x has two columns, then we get two 1D plots).

2014-08-15  Julien Bect  <julien.bect@supelec.fr>

	stk_plot1d.m: Add missing documentation.

	* misc/plot/stk_plot1d.m: Add doc.

	@stk_dataframe/plot.m: Full rewrite.

	* arrays/@stk_dataframe/plot.m: Full rewrite to improve
	compatibility with the base plot function. Deprecate the case
	where x is an stk_dataframe objects with two or more columns.

2014-08-14  Julien Bect  <julien.bect@supelec.fr>

	Add missing documentations.

	* arrays/@stk_factorialdesign/ndgrid.m: Add doc.
	* covfcs/stk_discretecov.m: Add doc.
