@@ -151,6 +151,7 @@ Examples: miscellaneous
 Miscellaneous: arrays
  stk_feval
  stk_isdominated
+ stk_length
  stk_normalize
  stk_paretofind
  stk_rescale
@@ -158,7 +159,6 @@ Miscellaneous: arrays
  @stk_factorialdesign/stk_factorialdesign
  @stk_factorialdesign/ndgrid
 
-#stk_length                  [do we really want this one ?] 
 #stk_commonsize              [internal]
 #stk_sprintf                 [internal]
 #stk_sprintf_colnames        [internal]
