@@ -1,3 +1,11 @@
+2014-08-18  Julien Bect  <julien.bect@supelec.fr>
+
+	Document stk_length.
+
+	* arrays/generic/stk_length.m: Add doc.
+	* arrays/@stk_dataframe/stk_length.m: Fix doc.
+	* admin/octave-pkg/INDEX: Un-hide stk_length.
+
 2014-08-17  Julien Bect  <julien.bect@supelec.fr>
 
 	Deprecate stk_plot2d.
